# documentation

./: .config  .gitignore  .gitlab-ci.yml  .gitmodules  .spelling  CMakeLists.txt  Dockerfile  README.md  conf.py  index.md  requirements.txt
.devcontainer/: devcontainer.json
.scripts/: json_to_md.py  requirements.txt
ApplicationNotes/: ideaList.md  reflectiveObjects.md
ApplicationNotes/Docker/: container.md  gpu.md
ApplicationNotes/MPI/: mpi.md
ApplicationNotes/StrayLight/: reflectiveObjects.md
CompatibilityMatrix/: compatibility_matrix.md
DeviceConfiguration/Parameters/: parameters.md
Docker/: docker.md  index.md  logging.md
FAQ/: FAQ.md
Firmware/: config_backup.json  fw_update.md
Firmware/ReleaseNotes/: index.md
GeneralDoc/: basicConcepts.md  bilateralFilter.md  binning.md  confidenceImage.md  cw_plausibilization.md  docToDos.md  docker.md  exposureTimes.md  filteringProcess.md  imagesDescription.md  isolatedPixelFilter.md  maxDistNoise.md  median.md  medianFilter.md  minAmplitude.md  minReflectivity.md  mixedPixelFilter.md  modes.md  offset.md  parameters.md  strayLight.md  symmetryThreshold.md  temporalFilter.md  troubleshooting.md
GeneralDoc/AcquisitionSettings/: README.md  modes.md
GeneralDoc/Filters/: bilateralFilter.md  maxDistNoise.md  median.md  symmetryThreshold.md
GettingStarted/ifmVisionAssistant/: first_steps_ifmVA.md
O3R/: README.md
O3R/ApplicationNotes/: README.md  mpi.md
O3R/Datasheets/: README.md
O3R/Docker/: README.md  deployVPU.md  docker.md  gpu.md
O3R/FAQ/: FAQ.md  README.md  faq.md
O3R/Firmware/: README.md
O3R/GeneralDoc/: bilateralFilter.md  minAmplitude.md  parameters.md  strayLight.md
O3R/GettingStarted/: README.md  debugging.md  getting_started.md  hw_unboxing.md  mount_usb.md  sw_installation.md  unboxing.md
O3R/Parameters/: README.md  parameters.md  parameters_overview.md
ODS/: index_ods.md
ODS/Cpp/Examples/: CMakeLists.txt  bootup_monitor.h  diagnostic.cpp  ods_config.cpp  ods_config.h  ods_demo.cpp  ods_get_data.cpp
ODS/Cpp/Examples/Configs/: ods_two_apps_config.json
PDS/: PDS.md  index_pds.md  test_index_pds.md
PDS/Cpp/: CMakeLists.txt  get_flags.cpp  get_item.cpp  get_rack.cpp  vol_check.cpp
PLC/: test.json
Parameters/: parameters.md
ProductsDescription/: README.md
Technology/: configuration.md  index_hardware_interfaces.md
customers/: README.md
internalDoc/: AD_compressed.md  CI_pipeline_pitfalls.md  Questions_Updates_TimeSync.md  customer_questions.md  python-basics.md  toc.md
notices/: README
(+146 files in other folders)
